# Multi-Snail

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
public/styles/: global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: MenuButton.astro
src/layouts/: header.astro  instance.astro
src/pages/: createInstance.astro  index.astro
