[package]
name = "multi-snail"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "multi-snail"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all"] }
subprocess = "0.2.9"
reqwest = { version = "0.11.12", features = ["blocking"] }
flate2 = "1.0.24"
tar = "0.4.38"
zip-extract = "0.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
